[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stiv_control"
version = "0.1.0"
description = "Package description here."
authors = [{name="Joshua Taggart", email="jftaggart02@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
]